--- a/TenpowerTalk/TenpowerTalk.csproj
+++ b/TenpowerTalk/TenpowerTalk.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>bitbug_favicon.ico</ApplicationIcon>
+    <ApplicationIcon>img\wow.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -74,37 +74,23 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Icon1.ico" />
+    <Resource Include="img\wow.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\wow.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\bitbug_favicon.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="bitbug_favicon.ico" />
+    <Resource Include="img\QQ.png" />
+    <Resource Include="img\会话.png" />
+    <Resource Include="img\加.png" />
+    <Resource Include="img\在线.png" />
+    <Resource Include="img\头像.png" />
+    <Resource Include="img\安全.png" />
+    <Resource Include="img\搜索.png" />
+    <Resource Include="img\收藏.png" />
+    <Resource Include="img\点.png" />
+    <Resource Include="img\电话.png" />
+    <Resource Include="img\雪人.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
